# podcast-shownotes

./: .gitignore  README.md  pyproject.toml
src/podcast_shownotes/: __init__.py
