[project]
name = "podcast-shownotes"
version = "0.1.0"
description = "Generate podcast show notes from a local audio file using local Whisper and Claude."
readme = "README.md"
authors = [
    { name = "Urban Hafner", email = "contact@urbanhafner.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mlx-whisper>=0.4.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.0.3 ; sys_platform != 'darwin' or platform_machine != 'arm64'",
]

[project.scripts]
shownotes = "podcast_shownotes:main"
podcast-shownotes = "podcast_shownotes:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
